--- a/404.md
+++ b/404.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: 404 - Page not found
-permalink: /404.html
+nav_exclude: true
 ---
 
 Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
