--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -3,6 +3,9 @@ title: About
 slug: "/about"
 ---
 
-Hi!
+These pages contain the following types of content:
 
-I'm LekoArts, a designer turned software engineer passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+* Posts about software development related to JavaScript, containers, and other technology adjacent topics.
+* Documentation for Open Source software that I have published.
+
+Thanks for reading.
