--- a/content/posts/20170806-mocking-passport/index.mdx
+++ b/content/posts/20170806-mocking-passport/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Mocking passport githubStrategy for functional testing
+title: Mock passport githubStrategy for functional testing
 date: 2017-08-06
 #tags: []
 ---
