--- a/content/posts/20211212-obsidian-git-annex/index.mdx
+++ b/content/posts/20211212-obsidian-git-annex/index.mdx
@@ -133,7 +133,7 @@ After the previous procedure is completed, you now have a git repository that co
    ok
    ```
 
-After this is configure, if you make and commit a change to your repository on one system, short after you can confirm with `git log` that your changes propagated to your other Macs:
+After this is configured, if you make and commit a change to your repository on one system, later you can confirm with `git log` that your changes propagated to your other Macs:
 
 ```
 commit bf9xxxx5e9b56f277xx72533e67c002400xx744c (HEAD -> master, origin/synced/master, origin/master, origin/HEAD, synced/master)
