--- a/content/posts/20170806-mocking-passport/index.mdx
+++ b/content/posts/20170806-mocking-passport/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Mock passport githubStrategy for functional testing
 date: 2017-08-06
-#tags: []
+tags:
+- JavaScript
 ---
 
 ## Introduction
