--- a/content/posts/20211212-obsidian-git-annex/index.mdx
+++ b/content/posts/20211212-obsidian-git-annex/index.mdx
@@ -1,7 +1,9 @@
 ---
 title: Sync Obsidian content between Macs
 date: 2021-12-12
-#tags: []
+tags:
+- MacOS
+- git
 ---
 
 If you keep notes for reference as I do, you might be using [Obsidian](https://obsidian.md) for this. Part of what makes Obsidian excellent is its use of Markdown for creating content. Because your data is not stashed away in some proprietary format or relational database, but plain text, that opens up avenues for easily syncing content between computers.
