Add Kubernetes API schema viewer project

--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
@@ -1,6 +1,6 @@
 <Title text="Projects" />
 
+- [Kubernetes API schema viewer](https://github.com/jboxman/kubernetes-api-docs)
 - [asciidoc-aware-link-check](/docs/projects/asciidoc-aware-link-check/)
 - [asciidoc-validate-yaml](/docs/projects/asciidoc-validate-yaml/)
-- [OpenShift OpenAPI documentation generator](/docs/projects/openshift-apidocs-gen/)
 - [Digital asset management](/docs/projects/dam/)
