--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
@@ -1,6 +1,7 @@
 <Title text="Projects" />
 
-- [Kubernetes API schema viewer](https://github.com/jboxman/kubernetes-api-docs)
+- [Kubernetes API schema viewer](/docs/projects/kasv/)
+- [OpenShift OpenAPI reference documentation generator](/docs/projects/openshift-apidocs-gen)
 - [asciidoc-aware-link-check](/docs/projects/asciidoc-aware-link-check/)
 - [asciidoc-validate-yaml](/docs/projects/asciidoc-validate-yaml/)
 - [Digital asset management](/docs/projects/dam/)
